[Issue #81] enable native I/O access on jdk 21 via jvm module opens (#82)